merge back changes from 1.1.1 branch to trunk
git-svn-id: https://svn.eu.apache.org/repos/asf/webservices/synapse/trunk@615763 13f79535-47bb-0310-9956-ffa450edef68